Added record_state to database and API. Also trying to fix routing, but not working yet.
