# api/swagger/swagger.yaml
@@ -516,6 +516,88 @@ paths:
             description: User successfully deleted.
           500:
             $ref: "#/responses/Standard500ErrorResponse"  
+            
+  /record-states:
+      x-swagger-router-controller: routeHandler
+      get:
+        tags:
+          - "record-state"
+        summary: Return all record_states
+        operationId: getRecordStateAll
+        responses:
+          200:
+            description: A list of record states
+            schema:
+              $ref: "#/definitions/record-states"
+          500:
+            $ref: "#/responses/Standard500ErrorResponse"
+      post:
+        tags:
+          - "record-state"
+        summary: Create a record state
+        operationId: postRecordState
+        parameters:
+          - name: record-state
+            in: body
+            description: The record-state that will be inserted
+            schema:
+              $ref: "#/definitions/record-state"
+        responses:
+          201:
+            $ref: "#/responses/Standard201CreatedResponse" 
+          500:
+            $ref: "#/responses/Standard500ErrorResponse" 
+       
+       
+            
+  /record-states/{id}:
+      parameters:
+        - $ref: "#/parameters/id"
+      x-swagger-router-controller: routeHandler
+      get:
+        tags:
+          - "record-state"
+        summary: Return a record-state
+        operationId: getRecordStateId 
+        responses:
+          200:
+            description: A record-state
+            schema:
+              $ref: "#/definitions/record-state"
+          404:
+            description: The record-state does not exist.
+          500:
+            $ref: "#/responses/Standard500ErrorResponse"
+            
+      put:
+        tags:
+          - "record-state"
+        summary: Change a record-state
+        operationId: putRecordState 
+        parameters:
+            - name: record-state
+              in: body
+              description: The record-state that will be changed
+              schema:
+                $ref: "#/definitions/record-state"
+        responses:
+          204:
+            description: Record-state sucessfully updated.
+          404:
+            $ref: "#/responses/ObjectDoesNotExistResponse"
+          500:
+            $ref: "#/responses/Standard500ErrorResponse"
+      delete:
+        tags:
+          - "record-state"
+        summary: Delete a record-state
+        operationId: deleteRecordState
+        responses:
+          204:
+            description: Record-state successfully deleted.
+          500:
+            $ref: "#/responses/Standard500ErrorResponse" 
+            
           
           
   /swagger:
@@ -538,6 +620,10 @@ definitions:
       composite_material_id:
         type: integer
       composite_material_name:
+        type: string
+      record_state_id:
+        type: integer
+      record_state_name:
         type: string
       comment:
         type: string
@@ -715,6 +801,8 @@ definitions:
     required:
       - name
     properties:
+      id:
+        type: integer
       name:
         type: string
   
@@ -722,6 +810,20 @@ definitions:
     type: array
     items:
       $ref: "#/definitions/user"
+  
+  record-state:
+    required:
+      - name
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+  
+  record-states:
+    type: array
+    items:
+      $ref: "#/definitions/record-state"
        
        
   
